# Sharepoint-GraphQL-Python

./: pyproject.toml
.github/workflows/: python-package.yml
sharepoint_graphql/: __init__.py  sharepoint_graphql.py
tests/: test_sharepoint_graphql.py
