

[project]
name = "sharepoint_graphql"
version = "0.1.5"
description = "This Python utility enables users to interact with SharePoint sites via Microsoft Graph API, facilitating tasks such as listing, downloading, uploading, moving, and deleting files."
readme = "README.md"
readme-content-type = "text/markdown"
authors = [
    { name = "Pong Wong", email = "ninn@opts-db.com" }
]
license = { text = "MIT" }
homepage = "https://github.com/woponi/Sharepoint-GraphQL-Python"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = ["requests",    "msal",]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90"]
ignore = ["E501"]
target-version = "py312"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.5",
    "ruff",
]
